# embedit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config-template.toml  config.toml  log_conf.yaml  pyproject.toml  schema.sql
.github/workflows/: main.yaml
embedit/: __init__.py  __main__.py  agent.py  cache.py  config.py  html.py  metadata.py  models.py  utils.py
embedit/providers/: __init__.py  instagram.py  provider.py  tiktok.py  twitter.py
embedit/providers/tiktok/: __init__.py  provider.py  utils.py
templates/: base.html  image.html  text.html  video.html
